# excel-auto-analyst

./: .gitignore  API_KEY_SETUP.md  Dockerfile  README.md  app.py  docker-compose.yml  packages.txt  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
ai/: __init__.py  prompt_builder.py  safe_executor.py
analytics/: __init__.py  stats_engine.py
config/: __init__.py  settings.py
core/: __init__.py  cleaner.py  data_loader.py  validator.py
reports/: __init__.py  ppt_generator.py
scripts/: dev_workflow.sh
tests/: __init__.py  conftest.py  test_cleaner.py  test_data_loader.py  test_ppt_generator.py  test_safe_executor.py  test_stats_engine.py  test_validator.py
ui/pages/: chat_page.py  clean_page.py  custom_analysis_page.py  outliers_page.py  report_page.py  stats_page.py  upload_page.py
